# language-server-adventure

./: .gitignore  mkdocs.yml
.github/workflows/: deploy.yml
Writerside/: language_server_adventure.tree  writerside.cfg
Writerside/topics/: home.md  index.md  order of reading.md  references.md
Writerside/topics/language parsing/: language parsing__index.md
Writerside/topics/language server/: language server__index.md  language server__setting up.md
docs/: index.md  references.md
docs-md/: references.md
docs-md-backup/: conclusion.md  order of reading.md
docs-md-backup/extensions/: index.md
docs-md-backup/extensions/vscode/: building_language_client.md  building_syntax_highlighter.md
docs-md-backup/language server/: index.md  setting_up.md
docs-md-backup/language server/rust/: setting up.md
docs-md-backup/language/parsing/: index.md  minimal_parsing.md
docs-md-old/docs/: order of reading.md
docs-md-old/docs/__workspace__/: possible-next-project-templates.md  todo.txt
docs-md/extensions/vscode/: remote_testing.md  setting_up.md
docs-md/language/lexing/: lexing.md
docs-mkdocs/: pyproject.toml
docs-writerside/Writerside/: language_server_adventure.tree  writerside.cfg
docs-writerside/Writerside/cfg/: buildprofiles.xml
docs/extensions/vscode/: building language client.md  remote testing.md  setting up.md
docs/language parsing/rust/: index.md
docs/language server/: index.md  setting up.md
projects/: .gitignore  Cargo.toml
projects/language-server/server/: Cargo.toml
projects/language/parser/: README.md
(+11 files in other folders)
