[tool.poetry]
name = "language"
version = "0.1.0"
description = ""
authors = ["SillyNana"]


[tool.poetry.dependencies]
python = "^3.10"

mkdocs = "^1.4.3"
mkdocs-material = "^9.1.11"
pillow = "^9.5.0"
cairosvg = "^2.7.0"
mike = "^1.1.2"


[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
